--- a/index.html
+++ b/index.html
@@ -1,281 +1,85 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Apri Porta - NEASPACE</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <style>
-    :root{
-      --bg:#EAF6FF; --fg:#111; --brand:#0088cc; --card:#fff; --muted:#777;
-      --radius:14px; --shadow:0 6px 20px rgba(0,0,0,.08);
-    }
-    /* Base */
-    html,body{height:100%}
-    body{
-      margin:0; background:var(--bg); color:var(--fg);
-      font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;
-      -webkit-font-smoothing:antialiased; text-align:center;
-    }
-    /* Header */
-    .header{
-      position:sticky; top:0; z-index:10;
-      display:flex; align-items:center; justify-content:center; gap:12px;
-      background:#fff; padding:12px calc(12px + env(safe-area-inset-right));
-      border-bottom:1px solid #eef1f4;
-    }
-    .header img{height:40px}
-    .brand{font-weight:700; font-size:20px}
-
-    /* Content */
-    .content{padding:28px 16px 12px}
-    .content h2{font-size:clamp(18px, 2.2vw + 14px, 28px); line-height:1.6; margin:0 auto 16px; max-width:980px}
-
-    .button-container{margin:18px auto 10px}
-    .btn{
-      font-size:16px; padding:14px 22px; border-radius:12px; border:0; cursor:pointer;
-      background:var(--brand); color:#fff; box-shadow:var(--shadow);
-      min-width:220px; touch-action:manipulation;
-    }
-
-    /* Guide section */
-    .guide{padding: 12px 16px 26px; max-width:1100px; margin:0 auto}
-    .grid{display:grid; grid-template-columns:1fr; gap:16px}
-    @media (min-width:900px){ .grid{grid-template-columns:1fr 1fr} }
-
-    .card{background:var(--card); border-radius:var(--radius); padding:12px; box-shadow:var(--shadow); text-align:center}
-
-    /* FOTO PORTA: centrata e responsiva */
-    .guide-img{
-      width:50%;         /* metà card su desktop */
-      max-width:280px;   /* limite opzionale per non esagerare */
-      height:auto;
-      border-radius:10px;
-      display:block;
-      margin:0 auto;     /* centrata */
-    }
-    @media (max-width: 600px){
-      .guide-img{ width:80%; }  /* più grande su mobile */
-    }
-
-    .caption{margin:8px 0 2px; font-size:14px; color:var(--muted)}
-    .video{position:relative; width:100%; padding-bottom:56.25%; border-radius:10px; overflow:hidden}
-    .video iframe{position:absolute; inset:0; width:100%; height:100%; border:0}
-
-    /* Footer action */
-    .footer-actions{padding:14px 16px 24px}
-    .back-btn{
-      display:inline-flex; align-items:center; gap:8px;
-      padding:14px 18px; font-size:16px; border-radius:12px; border:1px solid #cfe6fb; background:#fff;
-      color:#0a5aa6; box-shadow:var(--shadow); text-decoration:none;
-      min-width:240px; justify-content:center;
-    }
-    .back-btn:active{transform:translateY(1px)}
-  </style>
-</head>
-<body>
-  <div class="header">
-    <img src="https://login.smoobu.com/upload/images/website/logo/6/4/6/6/e/2/a/6/website_logo_530938_abf503416885c3141843d801c3717c2063e4bda6b56bf5268b3e1b264a7d8eae.jpg" alt="Logo NeaSpace" />
-    <span class="brand">NeaSpace</span>
-  </div>
-
-  <div class="content" id="message">
-    <h2>⏳ Controllo prenotazione in corso...</h2>
-    <div class="button-container" style="display:none">
-      <button class="btn" id="openBtn">&nbsp;&nbsp;&nbsp;Open now&nbsp;&nbsp;&nbsp;</button>
-    </div>
-  </div>
-
-  <!-- Sezione guida: immagine porta + video -->
-  <section class="guide" aria-label="How-to">
-    <div class="grid">
-      <div class="card">
-        <img class="guide-img" src="https://franchino1982.github.io/19rueneuve/porta.jpg" alt="Porta di casa - NeaSpace" loading="lazy" />
-        <p class="caption" id="photoCaption"></p>
-      </div>
-      <div class="card">
-        <div class="video">
-          <iframe
-            src="https://www.youtube.com/embed/wyDdD1UKy4A"
-            title="Come aprire e chiudere la porta di casa"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen>
-          </iframe>
-        </div>
-        <p class="caption" id="videoCaption"></p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Azione finale: torna alla guida ospiti -->
-  <div class="footer-actions">
-    <a id="backLink" class="back-btn" href="#">
-      ← <span id="backLabel">Back to Guest Guide</span>
-    </a>
-  </div>
-
   <script>
-    const API_BASE = "https://one9rueneuve.onrender.com";
-
-    // ====== i18n (solo automatico, senza selettore) ======
-    const M = {
-      it: {
-        loading: "⏳ Controllo prenotazione in corso...",
-        missing: "❌ Booking ID mancante",
-        opened: "🌞 La tua avventura a NeaSpace inizia ora: la porta è aperta. Sali al secondo piano, porta destra, e recupera le chiavi dalla keybox con il codice 0204. Mandaci un messaggino per confermare che siete a casa!",
-        outside: (s,e) => 🚫 La porta si apre solo tra ${s} e ${e}.,
-        error: "⚠ Errore nel caricamento dati",
-        openBtn: "Apri adesso",
-        photoCaption: "Salite al secondo piano, porta destra, e aprite la cassetta con le chiavi sulla porta con il codice 0204.",
-        videoCaption: "Video: come aprire e chiudere la porta di casa.",
-        back: "Torna alla guida ospiti"
-      },
-      en: {
-        loading: "⏳ Checking your booking...",
-        missing: "❌ Missing booking ID",
-        opened: "🌞 Your NeaSpace adventure starts now: the door is open. Go to the second floor, right door, and collect the keys from the keybox using code 0204. Please message us to confirm you've arrived!",
-        outside: (s,e) => 🚫 The door opens only between ${s} and ${e}.,
-        error: "⚠ Error loading data",
-        openBtn: "Open now",
-        photoCaption: "Go up to the second floor, right door, and open the keybox on the door with code 0204.",
-        videoCaption: "Video: how to open and close the home door.",
-        back: "Back to Guest Guide"
-      },
-      fr: {
-        loading: "⏳ Vérification de votre réservation...",
-        missing: "❌ ID de réservation manquant",
-        opened: "🌞 Votre aventure NeaSpace commence maintenant : la porte est ouverte. Montez au deuxième étage, porte à droite, et récupérez les clés dans la boîte à clés avec le code 0204. Merci de nous envoyer un message pour confirmer votre arrivée !",
-        outside: (s,e) => 🚫 La porte s'ouvre uniquement entre le ${s} et le ${e}.,
-        error: "⚠ Erreur lors du chargement des données",
-        openBtn: "Ouvrir maintenant",
-        photoCaption: "Montez au deuxième étage, porte à droite, et ouvrez la boîte à clés sur la porte avec le code 0204.",
-        videoCaption: "Vidéo : comment ouvrir et fermer la porte d'entrée.",
-        back: "Retour au guide des invités"
-      },
-      es: {
-        loading: "⏳ Verificando su reserva...",
-        missing: "❌ Falta el ID de la reserva",
-        opened: "🌞 Tu aventura en NeaSpace comienza ahora: la puerta está abierta. Sube al segundo piso, puerta a la derecha, y recoge las llaves de la caja con el código 0204. ¡Envíanos un mensaje para confirmar que has llegado!",
-        outside: (s,e) => 🚫 La puerta solo se abre entre ${s} y ${e}.,
-        error: "⚠ Error al cargar los datos",
-        openBtn: "Abrir ahora",
-        photoCaption: "Sube al segundo piso, puerta derecha, y abre la caja de llaves en la puerta con el código 0204.",
-        videoCaption: "Vídeo: cómo abrir y cerrar la puerta de la casa.",
-        back: "Volver a la guía para huéspedes"
-      }
-    };
-
-    function detectLang(){
-      const nav = (navigator.language || "en").slice(0,2).toLowerCase();
-      return M[nav] ? nav : "en";
-    }
-
-    function setLangUI(lang){
-      document.documentElement.lang = lang;
-      document.getElementById("openBtn").textContent = M[lang].openBtn;
-      document.getElementById("photoCaption").textContent = M[lang].photoCaption;
-      document.getElementById("videoCaption").textContent = M[lang].videoCaption;
-      document.getElementById("backLabel").textContent = M[lang].back;
-    }
-
-    function fmtDateByLang(d, lang){
-      try {
-        return d.toLocaleDateString(lang === 'en' ? 'en-GB' : lang, { day:'2-digit', month:'2-digit', year:'numeric' });
-      } catch {
-        return d.toLocaleDateString(undefined, { day:'2-digit', month:'2-digit', year:'numeric' });
-      }
-    }
-
-    // link "torna alla guida"
-    function wireBackLink(){
-      const a = document.getElementById("backLink");
-      const ref = document.referrer || "";
-      if (ref.includes("guest.smoobu.com")) {
-        a.href = ref;
-        a.onclick = null;
-      } else {
-        a.href = "https://guest.smoobu.com/";
-        a.onclick = (e) => {
-          e.preventDefault();
-          if (history.length > 1) history.back();
-          else location.href = "https://guest.smoobu.com/";
-        };
-      }
-    }
-
-    async function init(){
-      wireBackLink();
-
-      const lang = detectLang();
-      setLangUI(lang);
-
+    async function init() {
+      const API_BASE = "https://one9rueneuve.onrender.com";
+      const bookingId = new URLSearchParams(window.location.search).get('b');
       const msgBox = document.getElementById("message");
-      const openBtn = document.getElementById("openBtn");
-      const btnWrap = openBtn.parentElement;
 
-      const bookingId = new URLSearchParams(location.search).get('b');
-      if (!bookingId){
-        msgBox.innerHTML = <h2>${M[lang].missing}</h2>;
+      if (!bookingId) {
+        msgBox.innerHTML = "<h2>❌ Booking ID mancante</h2>";
         return;
       }
 
-      msgBox.innerHTML = <h2>${M[lang].loading}</h2>;
-      btnWrap.style.display = "none";
+      msgBox.innerHTML = "<h2>⏳ Controllo prenotazione...</h2>";
 
-      try{
-        const res = await fetch(${API_BASE}/booking/${encodeURIComponent(bookingId)}, { cache:'no-store' });
-        if (!res.ok) throw new Error("server");
+      try {
+        // 1) Prendo date dal backend
+        const res = await fetch(${API_BASE}/booking/${encodeURIComponent(bookingId)}, { cache: "no-store" });
+        if (!res.ok) throw new Error("Server non disponibile");
         const data = await res.json();
-        if (!data.ok || !data.start || !data.end) throw new Error(data.error || "bad-data");
+        if (!data.ok) throw new Error(data.error || "Errore dati");
 
         const start = new Date(data.start);
         const end   = new Date(data.end);
         const today = new Date();
-        start.setHours(0,0,0,0); end.setHours(0,0,0,0); today.setHours(0,0,0,0);
+        start.setHours(0,0,0,0);
+        end.setHours(0,0,0,0);
+        today.setHours(0,0,0,0);
 
-        const inWindow = today >= start && today <= end;
+        if (today >= start && today <= end) {
+          // 2) Dentro le date → invio apertura via backend (nessun popup)
+          msgBox.innerHTML = <h2>🌞 La porta è aperta! Sali al secondo piano, porta destra, codice 0204.<br>Mandaci un messaggino per confermare che siete a casa!</h2>;
 
-        if (inWindow) {
-          msgBox.innerHTML = <h2>${M[lang].opened}</h2>;
-          btnWrap.style.display = "inline-block";
-          openBtn.onclick = async () => {
-            // UI lock (facoltativo)
-            const prev = openBtn.textContent;
-            openBtn.disabled = true;
-            openBtn.style.opacity = "0.7";
-            openBtn.textContent = M[lang].openBtn + "…";
-            try {
-              const resp = await fetch(${API_BASE}/open/${encodeURIComponent(bookingId)}, {
-                method: "GET",
-                cache: "no-store"
-              });
-              const tg = await resp.json();
-              if (!(resp.ok && tg && tg.ok)) {
-                const reason = (tg && (tg.description || tg.error)) || HTTP ${resp.status};
-                alert("⚠ " + (M[lang].error || "Error") + ": " + reason);
-              } else {
-                console.log("✅ Messaggio Telegram inviato");
-              }
-            } catch (e) {
-              alert("⚠ " + (M[lang].error || "Error") + ": " + e.message);
-            } finally {
-              openBtn.disabled = false;
-              openBtn.style.opacity = "1";
-              openBtn.textContent = prev;
+          try {
+            const resp = await fetch(${API_BASE}/open/${encodeURIComponent(bookingId)}, { method: "GET", cache: "no-store" });
+            const tg = await resp.json().catch(() => ({}));
+            if (!(resp.ok && tg && tg.ok)) {
+              const reason = (tg && (tg.description || tg.error)) || HTTP ${resp.status};
+              console.error("Telegram non inviato:", reason);
             }
-          };
+          } catch (e) {
+            console.error("Errore invio Telegram:", e);
+          }
         } else {
-          const s = fmtDateByLang(start, lang);
-          const e = fmtDateByLang(end, lang);
-          msgBox.innerHTML = <h2>${M[lang].outside(s,e)}</h2>;
+          // 3) Fuori dalle date → messaggio con intervallo
+          const fmt = d => d.toLocaleDateString('it-IT', { day:'2-digit', month:'2-digit', year:'numeric' });
+          msgBox.innerHTML = <h2>🚫 La porta si apre solo tra ${fmt(start)} e ${fmt(end)}.</h2>;
         }
-      } catch(e){
-        console.error(e);
-        msgBox.innerHTML = <h2>${M[lang].error}</h2>;
+      } catch (err) {
+        console.error(err);
+        msgBox.innerHTML = "<h2>⚠ Errore: Failed to fetch</h2>";
       }
     }
 
     window.onload = init;
   </script>
+  <style>
+    body {
+      background-color:#EAF6FF; color:#1a1a1a;
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin:0; padding:0; text-align:center; font-size:28px;
+    }
+    .header {
+      background:white; padding:20px 10px;
+      display:flex; align-items:center; justify-content:center;
+    }
+    .header img { max-height:80px; margin-right:20px; }
+    .header span { font-size:48px; font-weight:bold; color:#111; }
+    .content { padding:80px 25px; }
+    h2 { font-size:42px; margin:30px; line-height:1.6; }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <img src="https://login.smoobu.com/upload/images/website/logo/6/4/6/6/e/2/a/6/website_logo_530938_abf503416885c3141843d801c3717c2063e4bda6b56bf5268b3e1b264a7d8eae.jpg" alt="Logo NeaSpace">
+    <span>NeaSpace</span>
+  </div>
+  <div class="content" id="message">
+    <h2>⏳ Controllo prenotazione in corso...</h2>
+  </div>
 </body>
 </html>
